@@ -14,36 +14,29 @@ import uk.gov.hmcts.reform.civil.service.NotificationService;
 import uk.gov.hmcts.reform.civil.service.OrganisationService;
 import uk.gov.hmcts.reform.prd.model.Organisation;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
-import static uk.gov.hmcts.reform.civil.callback.CaseEvent.NOTIFY_RESPONDENT_SOLICITOR1_SDO_TRIGGERED;
+import static uk.gov.hmcts.reform.civil.callback.CaseEvent.NOTIFY_RESPONDENT_SOLICITOR_DJ_RECEIVED;
+import static uk.gov.hmcts.reform.civil.utils.PartyUtils.getPartyNameBasedOnType;
 
 @Service
 @RequiredArgsConstructor
-public class CreateSDORespondentNotificationHandler extends CallbackHandler implements NotificationData {
+public class DJRespondentReceivedNotificationHandler extends CallbackHandler implements NotificationData {
 
-    private static final List<CaseEvent> EVENTS = List.of(NOTIFY_RESPONDENT_SOLICITOR1_SDO_TRIGGERED);
-
-    private static final String REFERENCE_TEMPLATE = "create-sdo-respondent-notification-%s";
-    public static final String TASK_ID = "CreateSDONotifyRespodentSolicitor1";
-
+    public static final String TASK_ID = "NotifyRespondentSolicitorDJReceived";
+    private static final List<CaseEvent> EVENTS = Collections.singletonList(NOTIFY_RESPONDENT_SOLICITOR_DJ_RECEIVED);
+    private static final String REFERENCE_TEMPLATE = "default-judgment-respondent-received-notification-%s";
     private final NotificationService notificationService;
     private final NotificationsProperties notificationsProperties;
     private final OrganisationService organisationService;
 
     @Override
     protected Map<String, Callback> callbacks() {
-        return Map.of(
-            callbackKey(ABOUT_TO_SUBMIT), this::notifyRespondentSolicitorSDOTriggered
-        );
-    }
-
-    @Override
-    public String camundaActivityId(CallbackParams callbackParams) {
-        return TASK_ID;
+        return Map.of(callbackKey(ABOUT_TO_SUBMIT), this::notifyRespondentSolicitorDefaultJudgmentReceived);
     }
 
     @Override
@@ -51,35 +44,41 @@ public class CreateSDORespondentNotificationHandler extends CallbackHandler impl
         return EVENTS;
     }
 
-    private CallbackResponse notifyRespondentSolicitorSDOTriggered(CallbackParams callbackParams) {
-        CaseData caseData = callbackParams.getCaseData();
+    @Override
+    public String camundaActivityId(CallbackParams callbackParams) {
+        return TASK_ID;
+    }
 
+    private CallbackResponse notifyRespondentSolicitorDefaultJudgmentReceived(CallbackParams callbackParams) {
+        CaseData caseData = callbackParams.getCaseData();
+        // Send email to respondent solicitor
         notificationService.sendMail(
             caseData.getRespondentSolicitor1EmailAddress(),
-            notificationsProperties.getSdoOrdered(),
+            notificationsProperties.getRespondentSolicitor1DefaultJudgmentReceived(),
             addProperties(caseData),
             String.format(REFERENCE_TEMPLATE, caseData.getLegacyCaseReference())
         );
-
         return AboutToStartOrSubmitCallbackResponse.builder().build();
     }
 
     @Override
     public Map<String, String> addProperties(CaseData caseData) {
         return Map.of(
-            CLAIM_REFERENCE_NUMBER, caseData.getLegacyCaseReference(),
-            CLAIM_LEGAL_ORG_NAME_SPEC, getRespondentLegalOrganizationName(
-                caseData.getRespondent1OrganisationPolicy().getOrganisation().getOrganisationID())
+            LEGAL_ORG_SPECIFIED, getLegalOrganizationName(caseData.getRespondent1OrganisationPolicy()
+                                                              .getOrganisation().getOrganisationID(), caseData),
+            CLAIM_NUMBER, caseData.getLegacyCaseReference(),
+            DEFENDANT_NAME, getPartyNameBasedOnType(caseData.getRespondent1())
         );
     }
 
-    public String getRespondentLegalOrganizationName(String id) {
-        Optional<Organisation> organisation = organisationService.findOrganisationById(id);
-        String respondentLegalOrganizationName = null;
-        if (organisation.isPresent()) {
-            respondentLegalOrganizationName = organisation.get().getName();
-        }
-        return respondentLegalOrganizationName;
-    }
-}
+    public String getLegalOrganizationName(String id, CaseData caseData) {
 
+        Optional<Organisation> organisation = organisationService.findOrganisationById(id);
+        if (organisation.isPresent()) {
+            return organisation.get().getName();
+        }
+
+        return caseData.getApplicantSolicitor1ClaimStatementOfTruth().getName();
+    }
+
+}
